Remove unused blog image assetRemove unused blog image asset

--- a/content/index.html
+++ b/content/index.html
@@ -1,14 +1,16 @@
 ---
-title: Hello, world! I'm Roq
-description: I provide you with all the tools to generate static websites with Quarkus super-powers.
-name: I am ROQ
-simple-name: ROQ
-image: iamroq.png
-social-twitter: quarkusio
-social-facebook:
-social-github: quarkiverse/quarkus-roq
-social-linkedin: quarkusio
+title: Welcome to Loïc's blog
+description:
+name: Loïc Magnette
+simple-name: Loïc Magnette
+image: lomagnette.jpg
+social-twitter: lomagnette
+social-github: lomagnette
+social-linkedin: lomagnette
+social-bluesky: lomagnette.bsky.social
 layout: :theme/index
+paginate:
+    collection: posts
+    size: 5
 ---
 
-<h1>Ready to Roq my world!</h1>
