--- a/content/about.html
+++ b/content/about.html
@@ -18,10 +18,6 @@ layout: :theme/page
           <i class="fa-brands fa-github"></i>
           <span>GitHub</span>
         </a>
-        <a href="https://twitter.com/lomagnette" target="_blank" rel="noopener noreferrer" class="author-social-link" aria-label="Twitter">
-          <i class="fa-brands fa-twitter"></i>
-          <span>Twitter</span>
-        </a>
         <a href="https://linkedin.com/in/lomagnette" target="_blank" rel="noopener noreferrer" class="author-social-link" aria-label="LinkedIn">
           <i class="fa-brands fa-linkedin"></i>
           <span>LinkedIn</span>
@@ -29,6 +25,10 @@ layout: :theme/page
         <a href="https://bsky.app/profile/lomagnette.bsky.social" target="_blank" rel="noopener noreferrer" class="author-social-link" aria-label="Bluesky">
           <i class="fa-brands fa-bluesky"></i>
           <span>Bluesky</span>
+        </a>
+        <a href="https://twitter.com/lomagnette" target="_blank" rel="noopener noreferrer" class="author-social-link" aria-label="Twitter">
+              <i class="fa-brands fa-twitter"></i>
+              <span>Twitter</span>
         </a>
       </div>
     </div>
@@ -48,7 +48,7 @@ layout: :theme/page
     <div class="highlight-card">
       <i class="fa-solid fa-users"></i>
       <h3>Community</h3>
-      <p>Co-organizer of BeJUG (Belgian Java User Group)</p>
+      <p>Co-organizer of <a href="https://bejug.github.io">BeJUG (Belgian Java User Group)</a></p>
     </div>
     <div class="highlight-card">
       <i class="fa-solid fa-microphone"></i>
