Add slide and recording links to talks data and replace text icons with images in talks.html

--- a/content/talks.html
+++ b/content/talks.html
@@ -220,12 +220,12 @@ layout: :theme/page
                                                 <div class="talk-links">
                                                     {#if talk.slides}
                                                         <a href="{talk.slides}" target="_blank" class="talk-link">
-                                                            📊 Slides
+                                                            <img src="/images/slides.png" alt="" width="24"/> Slides
                                                         </a>
                                                     {/if}
                                                     {#if talk.recording}
                                                         <a href="{talk.recording}" target="_blank" class="talk-link">
-                                                            🎥 Recording
+                                                            <img src="/images/camera.png" alt="" width="24"/> Recording
                                                         </a>
                                                     {/if}
                                                 </div>
