--- a/content/talks.html
+++ b/content/talks.html
@@ -74,6 +74,17 @@ layout: :theme/page
     margin-top: 0.5rem;
 }
 
+.event-name a {
+    color: var(--text-primary);
+    text-decoration: none;
+    transition: color 0.2s ease;
+}
+
+.event-name a:hover {
+    color: var(--color-primary);
+    text-decoration: underline;
+}
+
 .event-meta {
     display: flex;
     gap: 1.5rem;
@@ -202,7 +213,11 @@ layout: :theme/page
                 {#for event in year.events}
                     <div class="event-card">
                         <div class="event-header">
-                            <h3 class="event-name">{event.name}</h3>
+                            {#if event.url}
+                                <h3 class="event-name"><a href="{event.url}" target="_blank" rel="noopener noreferrer">{event.name}</a></h3>
+                            {#else}
+                                <h3 class="event-name">{event.name}</h3>
+                            {/if}
                             <div class="event-meta">
                                 <span class="event-meta-item">{event.date}</span>
                                 <span class="event-meta-item">{event.location}</span>
