--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 ---
 title: Loïc's blog
-description:
+description: "Loïc's Blog is a technical hub for modern software engineering, driven by the perspective of a senior developer. The content offers in-depth guidance on building high-performance, full-stack applications, specializing in cloud-native Java (with a strong focus on frameworks like Quarkus) and frontend development (e.g., Angular). It also explores the cutting edge of the ecosystem, providing practical insights into integrating innovative technologies like Large Language Models (LLMs) using tools such as LangChain4j. Whether you are optimizing application architecture or exploring the latest development patterns, the blog serves as an essential resource for advanced developers looking to master the modern software stack."
 name: Loïc Magnette
 simple-name: Loïc Magnette
 image: lomagnette.jpg
@@ -14,6 +14,6 @@ paginate:
     size: 5
 ---
 <head>
-    {#seo page site /}
+
 </head>
 
