Update blog title and description to emphasize expertise in Java, Quarkus, Angular, and AI/LLM integration

--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 ---
-title: Loïc's blog
-description: "Loïc's Blog is a technical hub for modern software engineering, driven by the perspective of a senior developer. The content offers in-depth guidance on building high-performance, full-stack applications, specializing in cloud-native Java (with a strong focus on frameworks like Quarkus) and frontend development (e.g., Angular). It also explores the cutting edge of the ecosystem, providing practical insights into integrating innovative technologies like Large Language Models (LLMs) using tools such as LangChain4j. Whether you are optimizing application architecture or exploring the latest development patterns, the blog serves as an essential resource for advanced developers looking to master the modern software stack."
+title: "Modern Java, Quarkus & Angular: Full-Stack Development | Loïc's Blog"
+description: "Senior developer blog specializing in modern Java, Quarkus, and Angular. Get in-depth guides on cloud-native architecture, full-stack development, and integrating AI/LLMs with LangChain4j."
 name: Loïc Magnette
 simple-name: Loïc Magnette
 image: lomagnette.jpg
