Refine blog title and description for clarity and conciseness, emphasizing core expertise in Java, Quarkus, Angular, and AI/LLM integration.

--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 ---
-title: "Modern Java, Quarkus & Angular: Full-Stack Development | Loïc's Blog"
-description: "Senior developer blog specializing in modern Java, Quarkus, and Angular. Get in-depth guides on cloud-native architecture, full-stack development, and integrating AI/LLMs with LangChain4j."
+title: "Modern Java, Quarkus & Angular: Full-Stack Development"
+description: "Senior dev resource for Java, Quarkus, and Angular. Guides on software architecture, full-stack development, and practical AI/LLM integration patterns."
 name: Loïc Magnette
 simple-name: Loïc Magnette
 image: lomagnette.jpg
